feat: m22 - add smoketest for paper trading
